--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>1006892799648-0h2f27fk2eod4qkav0ri61184h56fldi.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1006892799648-0h2f27fk2eod4qkav0ri61184h56fldi</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>1006892799648-c7tvdgurqn8j562sl05b87t0nicgg9db.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCTRRCFfStJAs1uXf9vofVcn7lYphrvOdo</string>
+	<string>AIzaSyDZooaskVDJslRmi0cvqzRWfEWqzuPSZsI</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1006892799648</string>
+	<string>511369160204</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.webbpulseCheckout</string>
 	<key>PROJECT_ID</key>
-	<string>webbpulse-checkout</string>
+	<string>webbcheck</string>
 	<key>STORAGE_BUCKET</key>
-	<string>webbpulse-checkout.appspot.com</string>
+	<string>webbcheck.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1006892799648:ios:1618865b1a1e4ba3505bc5</string>
+	<string>1:511369160204:ios:0e16363d1ef050e8a73029</string>
 </dict>
 </plist>
