--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^4.15.5
   provider: ^6.1.1
   firebase_ui_auth: ^1.13.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
