--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Authenticate to Firebase
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CREDENTIALS }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: firebase functions:config:set --project ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Deploy to Firebase
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CREDENTIALS }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: firebase deploy --only functions --project ${{ secrets.FIREBASE_PROJECT_ID }}
 
