--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -33,9 +33,7 @@ jobs:
 
       
       - name: Deploy functions to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only functions
+        uses: dheshalj/deploy-firebase-functions@v0.0.2
         env:
-          GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
-
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+          FIREBASE_PROJECT: ${{ secrets.FIREBASE_PROJECT_ID }}
