--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,8 +13,14 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       
+      - name: Deploy functions to Firebase
+        uses: dheshalj/deploy-firebase-functions@main
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+          FIREBASE_PROJECT: ${{ secrets.FIREBASE_PROJECT_ID }}
+      
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@main
         with:
           flutter-version: '3.22.2'
       
@@ -22,7 +28,7 @@ jobs:
         run: flutter pub get
       
       - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
+        uses: FirebaseExtended/action-hosting-deploy@main
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_CREDENTIALS }}
@@ -32,8 +38,4 @@ jobs:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
 
       
-      - name: Deploy functions to Firebase
-        uses: dheshalj/deploy-firebase-functions@v0.0.2
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
-          FIREBASE_PROJECT: ${{ secrets.FIREBASE_PROJECT_ID }}
+
