--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,11 +13,16 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       
-      - name: Deploy functions to Firebase
-        uses: dheshalj/deploy-firebase-functions@main
+      - name: install dependencies
+        run: cd functions/ && npm install
+      - name: deploy to production
+        uses: docker://w9jds/firebase-action:master
+        with:
+          args: deploy --only functions
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
-          FIREBASE_PROJECT: ${{ secrets.FIREBASE_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
+      - name: change directory
+        run: cd ..
       
       - name: Set up Flutter
         uses: subosito/flutter-action@main
