--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+        
+      - name: setup venv
+        run: python -m venv venv
+
       - name: deploy to production
         uses: docker://w9jds/firebase-action:master
         with:
