--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -22,7 +22,7 @@ jobs:
         run: python -m venv venv
 
       - name: deploy to production
-        uses: docker://w9jds/firebase-action:master
+        uses: w9jds/firebase-action@master
         with:
           args: deploy --only functions
         env:
