--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           python-version: '3.10'
         
-      - name: setup venv
-        run: python -m venv venv
+      - name: cd into functions directory
+        run: cd functions
 
       - name: deploy to production
         uses: w9jds/firebase-action@master
@@ -27,6 +27,9 @@ jobs:
           args: deploy --only functions
         env:
           GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
+
+      - name: cd back to root
+        run: cd ..
       
       - name: Set up Flutter
         uses: subosito/flutter-action@main
