--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,8 @@ jobs:
       
       - name: Activate virtual environment and install dependencies
         run: |
-          source functions/venv/bin/activate
+          pwd
+          source ./functions/venv/bin/activate
           pip install -r requirements.txt
       
       - name: deploy to production
