--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10.6'
+
+      - name: print working directory
+        run: pwd
       
       - name: Activate virtual environment and install dependencies
         run: |
-          pwd
           source ./functions/venv/bin/activate
           pip install -r requirements.txt
       
