--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,12 +18,12 @@ jobs:
         with:
           python-version: '3.10.6'
 
-      - name: ls
-        run: ls
+      - name: ls functions
+        run: ls functions
       
       - name: Activate virtual environment and install dependencies
         run: |
-          source ./functions/venv/bin/activate
+          source functions/venv/bin/activate
           pip install -r requirements.txt
       
       - name: deploy to production
