--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           python-version: '3.10.6'
 
-      - name: ls functions/venv/bin
-        run: ls functions/venv/bin
+      - name: ls functions/venv
+        run: ls functions/venv
       
       - name: Activate virtual environment and install dependencies
         run: |
