--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Activate virtual environment and install dependencies
         run: |
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install -r venv/requirements.txt
       
       - name: Deploy functions to production
         env:
