--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,7 +31,7 @@ jobs:
           ls ./functions
           source ./functions/venv/Scripts/activate
           ls ./functions/venv
-          pip install -r ./functions/venv/requirements.txt
+          pip install -r ./functions/requirements.txt
       
       - name: Deploy functions to production
         env:
