--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,6 +20,14 @@ jobs:
       
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
+      
+      - name: install python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.6'
+
+      - name: Deploy functions
+        run: firebase deploy --only functions --token ${{ secrets.FIREBASE_TOKEN }}
 
       - name: Set up Flutter
         uses: subosito/flutter-action@main
@@ -29,8 +37,7 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Deploy functions
-        run: firebase deploy --only functions --token ${{ secrets.FIREBASE_TOKEN }}
+
       
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@main
