--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,11 +8,25 @@ on:
 jobs:
   deploy:
     name: Build and Deploy
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
       
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+      
+      - name: Deploy functions to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
 
       - name: Set up Flutter
         uses: subosito/flutter-action@main
