--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,21 +13,13 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-      
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
       - name: setup python
         uses: actions/setup-python@v2
         with:
           python-version: '3.12'
           
       - name: activate virtualenv and install dependencies
-        run: '. "./functions/venv/bin/activate" && python3.12 -m pip install -r requirements.txt'
+        run: '. "./functions/venv/bin/activate" && python3.12 -m pip install -r ./functions/requirements.txt'
       
       - name: Deploy functions to Firebase
         uses: w9jds/firebase-action@master
