--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,13 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
+      - name: deploy functions
+        uses: w9jds/firebase-action@v13.14.0
+        with:
+          args: deploy --only functions
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CREDENTIALS }}
+
       - name: Set up Flutter
         uses: subosito/flutter-action@main
         with:
