--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.12' # prob required based off local testing
-          # this error will happen if python is not set up 
+          # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
           # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_checkout\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
       - name: install dependencies
-        run: pip install -r /functions/requirements.txt
+        run: pip install -r ./functions/requirements.txt
       
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
