--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12' # prob required based off local testing
+          python-version: '3.12' 
           # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
           # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_checkout\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
-      - name: install dependencies
-        run: pip install -r ./functions/requirements.txt
-      
+      - name: Install dependencies
+        run: source ./functions/venv/bin/activate && python -m pip install -r ./functions/requirements.txt
+          
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
         with:
