--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,8 +20,14 @@ jobs:
           # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
           # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_checkout\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
-      - name: spin up virtual environment and install dependencies
-        run: python -m venv ./functions/venv && source ./functions/venv/bin/activate && python -m pip install -r ./functions/requirements.txt
+      - name: spin up virtual environment
+        run: python -m venv ./functions/venv
+        
+      - name: activate virtual environment
+        run: source ./functions/venv/bin/activate 
+        
+      - name: install dependencies
+        run: python -m pip install -r ./functions/requirements.txt
 
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
