--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12' 
+          python-version: '3.11' 
           # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
           # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_checkout\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
@@ -35,7 +35,7 @@ jobs:
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
         with:
-          args: deploy --only functions --debug
+          args: deploy --only functions
         env:
          GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
 
