--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,13 +24,7 @@ jobs:
         run: python -m pip install -r ./functions/requirements.txt
 
       - name: spin up virtual environment
-        run: python -m venv ./functions/venv
-        
-      - name: activate virtual environment
-        run: source ./functions/venv/bin/activate 
-        
-      - name: install dependencies
-        run: python -m pip install -r ./functions/requirements.txt
+        run: python3.11 -m venv ./functions/venv
 
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
