--- a/firebase.json
+++ b/firebase.json
@@ -45,7 +45,11 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
+      ],
+      "predeploy": [
+        "source functions/venv/bin/activate && python3.11 -m pip install -r functions/requirements.txt"
       ]
+      
     }
   ]
 }
