--- a/firebase.json
+++ b/firebase.json
@@ -47,7 +47,7 @@
         "*.local"
       ],
       "predeploy": [
-        "source functions/venv/bin/activate && python3.11 -m pip install -r functions/requirements.txt"
+        "source ./functions/venv/bin/activate && python3.11 -m pip install -r functions/requirements.txt"
       ]
       
     }
