--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,6 +26,12 @@ jobs:
       - name: spin up virtual environment
         run: python3.11 -m venv ./functions/venv
 
+      - name: activate virtual environment
+        run: source ./functions/venv/bin/activate
+
+      - name: install requirements
+        run: python3.11 -m pip install -r ./functions/requirements.txt
+
       - name: deploy functions
         uses: w9jds/firebase-action@v13.14.0
         with:
