--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -35,12 +35,11 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: activate virtual environment and install requirements
-        env:
-         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
-          firebase deploy --only functions --non-interactive
+          export GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.FIREBASE_CREDENTIALS }}
+          firebase deploy --only functions
 
 
 
