--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -35,10 +35,12 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: activate virtual environment and install requirements
+
         run: |
+          echo "${{ secrets.FIREBASE_CREDENTIALS }}" > /opt/gcp_key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=/opt/gcp_key.json
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
-          export GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.FIREBASE_CREDENTIALS }}
           firebase deploy --only functions
 
 
