--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           echo "${{ secrets.FIREBASE_CREDENTIALS }}" > /opt/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=/opt/gcp_key.json
-          echo $GOOGLE_APPLICATION_CREDENTIALS
+          cat GOOGLE_APPLICATION_CREDENTIALS
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
           firebase deploy --only functions
