--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -41,6 +41,7 @@ jobs:
           deactivate  
           echo "${{ secrets.FIREBASE_CREDENTIALS }}" > /opt/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=/opt/gcp_key.json
+          cat /opt/gcp_key.json
           firebase deploy --only functions
 
 
