--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,21 +24,14 @@ jobs:
         run: python -m pip install -r ./functions/requirements.txt
 
       
-      - name: install node
-        uses: actions/setup-node@v2
+
+      - name: GitHub Action for Firebase
+        uses: w9jds/firebase-action@v13.14.0
         with:
-          node-version: '18'
-
-      - name: install firebase tools
-        run: npm install -g firebase-tools
-
-      - name: activate virtual environment and install requirements
-        run: |
-          source ./functions/venv/bin/activate
-          echo "${{ secrets.FIREBASE_CREDENTIALS }}" > /opt/gcp_key.json
-          export GOOGLE_APPLICATION_CREDENTIALS=/opt/gcp_key.json
-          cat /opt/gcp_key.json
-          firebase deploy --only functions
+          args: deploy --only functions
+        env: 
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+    
 
 
 
