--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12' 
+          python-version: '3.11' 
           # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
           # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_checkout\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
-      - name: asd
+      - name: 
         run: |
-          python3.12 -m venv ./functions/venv 
+          python3 -m venv ./functions/venv 
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
-          python3.12 --version
+          python3 --version
       
       - name: GitHub Action for Firebase
         uses: w9jds/firebase-action@v13.14.0
