--- a/firebase.json
+++ b/firebase.json
@@ -36,7 +36,8 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": [
-    {
+    { 
+      "runtime": "python311",
       "source": "functions",
       "codebase": "default",
       "ignore": [
