--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -35,6 +35,8 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: activate virtual environment and install requirements
+        env:
+          FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
