--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: deploy functions
+        env:
+          GCP_SA_KEY: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
           python -m venv ./functions/venv 
           source ./functions/venv/bin/activate
