--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,7 +31,7 @@ jobs:
           source ./functions/venv/bin/activate
           pip install -r ./functions/requirements.txt
           deactivate
-          echo "$GCP_SA_KEY" > ./gcp_key.json
+          echo "$GCP_SA_KEY" > ./functions/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
           firebase deploy --only functions --debug
           
