--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.1.1
   firebase_ui_auth: ^1.13.0
   rxdart: ^0.28.0
+  cloud_functions: ^4.7.6
 
 dev_dependencies:
   flutter_test:
