--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,7 +27,14 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Create functions python venv, install dependencies, an deploy functions
+      - name: Set up Flutter
+        uses: subosito/flutter-action@main
+        with:
+          flutter-version: '3.22.2'
+      
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Deploy Functions and Hosting
         env:
 
           FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
@@ -38,23 +45,5 @@ jobs:
           deactivate
           echo "$FIREBASE_APPLICATION_CREDENTIALS" > ./functions/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
-          firebase deploy --only functions
+          firebase deploy
 
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@main
-        with:
-          flutter-version: '3.22.2'
-      
-      - name: Install dependencies
-        run: flutter pub get
-      
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@main
-        with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
-          channelId: live
-          projectId: webbcheck
-        env: 
-          FIREBASE_CLI_EXPERIMENTS: webframeworks
