--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -34,6 +34,7 @@ jobs:
       
       - name: Install dependencies
         run: flutter pub get
+
       - name: Deploy Functions and Hosting
         env:
 
@@ -45,5 +46,6 @@ jobs:
           deactivate
           echo "$FIREBASE_APPLICATION_CREDENTIALS" > ./functions/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
+          firebase experiments:enable webframeworks
           firebase deploy
 
