--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -47,5 +47,4 @@ jobs:
           echo "$FIREBASE_APPLICATION_CREDENTIALS" > ./functions/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
           firebase experiments:enable webframeworks
-          firebase --only functions,hosting
-
+          firebase deploy --only functions,hosting
