--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -29,7 +29,10 @@ jobs:
           flutter-version: '3.22.2'
       
       - name: Install dependencies
-        run: flutter pub get
+        run: |
+          cd hosting 
+          flutter pub get
+          cd ..
 
       - name: Deploy Functions and Hosting
         env:
