--- a/hosting/pubspec.yaml
+++ b/hosting/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_ui_auth: ^1.13.0
   rxdart: ^0.28.0
   cloud_functions: ^4.7.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
