--- a/hosting/pubspec.yaml
+++ b/hosting/pubspec.yaml
@@ -29,5 +29,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/codelab.png
-    - assets/saber.gif
+    - assets/boxes.jpg
