--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -46,4 +46,4 @@ jobs:
           echo "$FIREBASE_APPLICATION_CREDENTIALS" > ./functions/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
           firebase experiments:enable webframeworks
-          firebase deploy --only functions,hosting
+          firebase deploy --only all
