--- a/hosting/pubspec.yaml
+++ b/hosting/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   rxdart: ^0.28.0
   cloud_functions: ^4.7.6
   intl: ^0.19.0
+  csv: ^6.0.0
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
