--- a/hosting/pubspec.yaml
+++ b/hosting/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   intl: ^0.19.0
   csv: ^6.0.0
   file_picker: ^8.0.7
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.4
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
