--- a/hosting/linux/CMakeLists.txt
+++ b/hosting/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "webbpulse_inventory_management")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.webbpulse.inventory")
+set(APPLICATION_ID "com.webbpulse.inventory.linux")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
