--- a/hosting/macos/Runner/Configs/AppInfo.xcconfig
+++ b/hosting/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = webbpulse_inventory_management
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.webbpulse.inventory
+PRODUCT_BUNDLE_IDENTIFIER = com.webbpulse.inventory.macos
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
